--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.read.ReadActivity" />
+        <activity android:name=".ui.search.SearchActivity"/>
     </application>
 
 </manifest>
