--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.read.ReadActivity" />
         <activity android:name=".ui.search.SearchActivity"/>
+        <activity android:name=".ui.surah.SurahActivity"/>
     </application>
 
 </manifest>
