--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ui.read.ReadActivity" />
         <activity android:name=".ui.search.SearchActivity"/>
         <activity android:name=".ui.surah.SurahActivity"/>
+        <activity android:name=".ui.praytime.PrayTimeActivity"/>
     </application>
 
 </manifest>
